recursion.lessons.recursion.koch.Crab.scala.error
Crab:3: error: ';' expected but ')' found.
if (levels ==0) {avance(length))}
                               ^